fix(api): add index and limit to resolver endpoint response
Add them to the response payload in addition to the headers. Also updates the OpenAPI doc with the new fields and headers.
